# basile-bot

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: linkedin.py  main.py  resume.py  server.py
backend/modules/: __init__.py  generator.py  github.py  linkedin.py  prompts.py  resume.py
client/: app.py  index.html  main.py  styles.css  terminal.js
deployment/: deploy.sh  destroy.sh  test-startup.sh
frontend/: client.py  index.html  messageTypes.js  pyodideWorker.js  styles.css  terminal.js
server/: generator.py  github.py  main.py  resume.py
utilities/: deploy.sh
