[tool.poetry]
name = "basilebot"
version = "0.1.0"
description = ""
authors = ["Alex Basile <basileaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.86"
pymupdf = "^1.25.1"
bs4 = "^0.0.2"
requests = "^2.32.3"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
